[project]
name = "playground-pydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "playwright>=1.51.0",
    "pydantic-ai>=0.0.42",
    "pydantic-graph>=0.0.42",
]
